# klinx

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  pr-auto-update-branches.yml
crates/klinx/: AGENTS.md  Cargo.toml  Dioxus.toml
crates/klinx-git/: AGENTS.md  Cargo.toml
crates/klinx-git/src/: gix_backend.rs  lib.rs  ops.rs  provider.rs  types.rs
crates/klinx/assets/: klinx.css
crates/klinx/src/: app.rs  autodoc.rs  commands.rs  cxl_bridge.rs  debug_state.rs  file_ops.rs  fs_watcher.rs  keyboard.rs  main.rs  notes.rs  parse_diagnostics.rs  perf.rs  pipeline_view.rs  search.rs  state.rs  sync.rs  tab.rs  template.rs  workspace.rs  yaml_patch.rs
crates/klinx/src/components/: AGENTS.md  activity_bar.rs  command_palette.rs  confirm_dialog.rs  mod.rs  placeholder_page.rs  settings_overlay.rs  status_bar.rs  tab_bar.rs  template_gallery.rs  title_bar.rs  toast.rs  welcome_screen.rs
crates/klinx/src/components/canvas/: body_overlay.rs  body_sub_canvas.rs  breadcrumbs.rs  composition_pip.rs  connector.rs  exploded_body.rs  extract_modal.rs  mod.rs  node.rs  panel.rs
crates/klinx/src/components/file_explorer/: mod.rs  model.rs  panel.rs
crates/klinx/src/components/inspector/: cxl_diagnostics.rs  cxl_input.rs  drawer_bar.rs  drawer_docs.rs  drawer_notes.rs  drawer_run.rs  mod.rs  model.rs  panel.rs  provenance.rs  scoped_yaml.rs  stage_header.rs
crates/klinx/src/components/run_log/: drawer.rs  mod.rs
crates/klinx/src/components/schema_panel/: field_list.rs  mod.rs  panel.rs  schema_card.rs
crates/klinx/src/components/schematics/: flow_bar.rs  mod.rs  panel.rs  stage_card.rs
crates/klinx/src/components/search_panel/: mod.rs  panel.rs  search_results.rs
crates/klinx/src/components/version_mode/: branch_bar.rs  changes_tab.rs  conflicts_tab.rs  diff_tab.rs  log_tab.rs  mod.rs  panel.rs  pr_pane.rs  stash_tab.rs
crates/klinx/src/components/yaml_sidebar/: highlight.rs  mod.rs  panel.rs  tokenizer.rs
crates/klinx/src/hooks/: channels.rs  compiled_plan.rs  git_state.rs  mod.rs  pipeline_sync.rs  schema_index.rs  session_persistence.rs
crates/klinx/src/pipeline_view/: field_lineage.rs  layout_model.rs
crates/klinx/src/templates/: csv_dedup.yaml  csv_join.yaml  csv_transform.yaml  full_etl.yaml  json_flatten.yaml  xml_extract.yaml
crates/klinx/tests/: canvas_channel_test.rs  canvas_composition_test.rs  extract_composition_test.rs
crates/klinx/tests/fixtures/: large_pipeline.yaml
doc/ai/: 00_READ_THIS_FIRST.md  30_DESIGN_RULES.md  40_COMMON_PATTERNS.md  50_TESTING_AND_COMMANDS.md  60_PERFORMANCE_NOTES.md  70_GLOSSARY.md  80_OPEN_QUESTIONS.md  90_LOCAL_AGENT_PLAN.md  AI_CHANGELOG.md  README.md
docs/: perf.md
docs/ai/: 00_READ_THIS_FIRST.md  10_ARCHITECTURE.md  20_PROJECT_MAP.md  30_DESIGN_RULES.md  40_COMMON_PATTERNS.md  50_TESTING_AND_COMMANDS.md  60_PERFORMANCE_NOTES.md  70_GLOSSARY.md  80_OPEN_QUESTIONS.md  90_LOCAL_AGENT_PLAN.md  AI_CHANGELOG.md
docs/ai/github-workflow/: OPERATIONS.md
docs/research/: 2026-06-13-field-lineage-ui.md  2026-06-14-field-lineage-ui-followups.md  2026-06-14-route-node-visualization.md  2026-06-17-aggregate-field-lineage-ui.md
examples/: README.md
examples/pipelines/: .gitignore  audit_join.yaml  customer_clean.yaml  customer_etl.yaml  hopping_sliding_5m_1h.yaml  invoice_daily_rollup.yaml  invoices.yaml  kiln.toml  layout_benchmark_order_lifecycle.yaml  layout_benchmark_source_reuse.yaml  long_field_support.yaml  multi_source_session.yaml  order_fulfillment.yaml  tumbling_clicks.yaml
examples/pipelines/compositions/: clean_names.comp.yaml  fiscal_date.comp.yaml  order_classification.comp.yaml  shipping_cost.comp.yaml  validate_email.comp.yaml
examples/pipelines/data/: audit_events.csv  audit_orders.csv  customers.csv  hopping_clicks.csv  invoices.csv  orders.csv  people.csv  products.csv  session_logins.csv  session_mobile.csv  support_agents.csv  (+2 more)
scripts/: shot.sh
(+11 files in other folders)
