[package]
name = "klinx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Klinx — IDE for authoring Clinker YAML pipeline configurations"

[dependencies]
dioxus.workspace = true
cxl.workspace = true
clinker-core.workspace = true
clinker-record.workspace = true
clinker-schema.workspace = true
clinker-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
indexmap.workspace = true
petgraph.workspace = true
blake3.workspace = true
uuid = { workspace = true, features = ["js"] }
dirs.workspace = true
toml.workspace = true
dioxus-nox-cmdk = "0.13"
dioxus-nox-select = "0.13"
regex.workspace = true

# Desktop-only dependencies (not available on wasm32)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { version = "=0.7.4", features = ["desktop"] }
tokio.workspace = true
notify.workspace = true
klinx-git.workspace = true
rfd.workspace = true

[dev-dependencies]
chrono.workspace = true
