[package]
name = "klinx"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Klinx — IDE for authoring Clinker YAML pipeline configurations"

[dependencies]
dioxus = { workspace = true, features = ["desktop"] }
cxl.workspace = true
clinker-core.workspace = true
clinker-record.workspace = true
clinker-schema.workspace = true
clinker-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-saphyr.workspace = true
saphyr-parser-bw.workspace = true
indexmap.workspace = true
petgraph.workspace = true
blake3.workspace = true
uuid = { workspace = true, features = ["v4"] }
dirs.workspace = true
toml.workspace = true
dioxus-nox-cmdk = "0.13"
dioxus-nox-select = "0.13"
regex.workspace = true
tokio.workspace = true
notify.workspace = true
klinx-git.workspace = true
rfd.workspace = true
dioxus-nox-virtualize = "0.13"

[features]
# Opt-in, zero-cost-when-disabled timing traces for performance work.
# Build with `--features perf-trace` to print tokenize/parse timings to stderr.
# See docs/perf.md.
perf-trace = []

[dev-dependencies]
chrono.workspace = true
